--- a/Demo/pom.xml
+++ b/Demo/pom.xml
@@ -35,12 +35,6 @@
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>8.0.28</version>
 	</dependency>
-
-	<dependency>
-		<groupId>va.vt.cbil</groupId>
-		<artifactId>Aqua</artifactId>
-		<version>1.1.0</version>
-	</dependency>
 	
 	<dependency>
     <groupId>net.sf.ehcache</groupId>
@@ -53,6 +47,13 @@
         <artifactId>hibernate-ehcache</artifactId>
         <version>4.1.6.Final</version>
     </dependency>
+	
+	<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+	<dependency>
+	    <groupId>commons-fileupload</groupId>
+	    <artifactId>commons-fileupload</artifactId>
+	    <version>1.5</version>
+	</dependency>
 
   </dependencies>
 </project>
